--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <link rel="manifest" href="manifest.json" />
 
-  <title>New App</title>
+  <title>Rubiks Cube Algorithms</title>
 </head>
 
 <body>
