--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#123a53">
+  <meta name="msapplication-TileColor" content="#123a53">
+  <meta name="theme-color" content="#123a53">
   <link rel="manifest" href="manifest.json" />
 
   <title>Rubiks Cube Algorithms</title>
