--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#123a53">
   <meta name="msapplication-TileColor" content="#123a53">
   <meta name="theme-color" content="#123a53">
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="/manifest.json" />
 
   <title>Rubiks Cube Algorithms</title>
 </head>
